<resources>
    <string name="app_name">Capsule</string>

    <string name="default_notification_channel_id">default</string>


    <string name="description">5G Speed \n Online Pharmacy</string>
    <string name="get_started">Get started</string>
    <string name="next">Continue</string>

    <!-- Login Activity -->
    <string name="login_activity_description">
        HP will send an SMS message to verify
        your phone number Enter your country
        code and phone number
    </string>

    <string name="name">User Name</string>
    <string name="email">E-mail</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp_description">We\'ve sent an OTP to your mobile number</string>
    <string name="dash">______</string>
    <string name="submit">Submit</string>
    <string name="delivery_description">Free 2–4 Hour Delivery</string>
    <string name="discount_description">Flat 15–20% off</string>
    <string name="returns_description">Easy 15 days Returns</string>
    <string name="logo">LOGO</string>
    <string name="terms_msg">By Tapping on continue, you agree to the</string>
    <string name="terms_link"><![CDATA[Terms & Conditions]]></string>
    <string name="search_for_items">Search for items</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="cart">Cart</string>
    <string name="vellore">Vellore</string>
    <string name="order_with_prescription">Order with prescription</string>
    <string name="up_to_20_off">UP TO 20% OFFER</string>
    <string name="upload">UPLOAD</string>
    <string name="important_message">Important Message</string>
    <string name="popular_products">Popular Products</string>
    <string name="view_all">VIEW ALL</string>
    <string name="search">Search</string>
    <string name="choose_an_option_to_upload">Choose an option to upload</string>
    <string name="camera">CAMERA</string>
    <string name="my_prescriptions">MY PRESCRIPTIONS</string>
    <string name="gallery">GALLERY</string>

    <string name="valid_prescription_guide">Valid Prescription Guide</string>
    <string name="guide_1">- Don\'t crop out any part of image</string>
    <string name="guide_2">- Avoid blurred image</string>
    <string name="guide_3">- Include details of doctor and patient + clinic visit date</string>
    <string name="guide_4">- Medicines will be dispensed as per prescription</string>
    <string name="government_regulation_require_a_valid_prescription">Government regulation require a valid prescription</string>
    <string name="attached_prescription">Attached Prescription</string>
    <string name="continue_key">CONTINUE</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="search_medicine">search medicine</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="register">Register</string>
    <string name="user_name">User name</string>
    <string name="age">Age</string>
    <string name="email_id">Email ID</string>
    <string name="referral_code_optional">Referral Code (optional)</string>
    <string name="registration">REGISTRATION</string>
    <string name="done">DONE</string>
    <string name="_required">*required</string>
    <string name="_invalid_pincode">*Invalid pincode</string>
    <string name="_city_limit">Please choose inside vellore city limit</string>
    <string name="valid_phonenumber">Choose valid Phone number</string>
    <string name="my_orders">My Orders</string>
    <string name="home">Home</string>
    <string name="my_consultations">My Consultations</string>
    <string name="settings">Settings</string>
    <string name="buy_medicines">BUY MEDICINES</string>
    <string name="add_address">ADD ADDRESS</string>
    <string name="note_prescription">Note: Prescription not mandatory for OTC products</string>
    <string name="change_address">Change Address</string>
    <string name="address_details">Address Details</string>
    <string name="search_buy_medicines"><![CDATA[Search & Buy Medicines]]></string>
    <string name="otc_wellness"><![CDATA[OTC & Wellness]]></string>
    <string name="your_orders">Your Orders</string>

</resources>
