<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UploadPrescriptionActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/continueLayout"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_an_option_to_upload"
                    android:textColor="@color/colorBlack" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawablePadding="@dimen/_8dp"
                            android:drawableTop="@drawable/ic_camera"
                            android:gravity="center"
                            android:onClick="cameraClick"
                            android:padding="@dimen/_16dp"
                            android:text="@string/camera"
                            android:textSize="@dimen/_10sp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="0.5dp"
                            android:layout_height="match_parent"
                            android:background="@color/colorPrimaryDark" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawablePadding="@dimen/_8dp"
                            android:drawableTop="@drawable/ic_gallery"
                            android:gravity="center"
                            android:onClick="galleryClick"
                            android:padding="@dimen/_16dp"
                            android:text="@string/gallery"
                            android:textSize="@dimen/_10sp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="0.5dp"
                            android:layout_height="match_parent"
                            android:background="@color/colorPrimaryDark" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawablePadding="@dimen/_8dp"
                            android:drawableTop="@drawable/ic_prescription"
                            android:gravity="center"
                            android:onClick="myPrescriptionsClick"
                            android:padding="@dimen/_16dp"
                            android:text="@string/my_prescriptions"
                            android:textSize="@dimen/_10sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/attachedPrescriptionCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16dp"
                android:layout_marginStart="@dimen/_16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/attached_prescription"
                        android:textColor="@color/colorBlack" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rvPrescriptionPhoto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4dp"
                        android:padding="@dimen/_4dp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/valid_prescription_guide"
                        android:textColor="@color/colorBlack" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4dp"
                        android:padding="@dimen/_4dp"
                        android:text="@string/guide_1"
                        android:textColor="@color/colorBlue"
                        android:textSize="@dimen/_10sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4dp"
                        android:padding="@dimen/_4dp"
                        android:text="@string/guide_2"
                        android:textColor="@color/colorBlue"
                        android:textSize="@dimen/_10sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4dp"
                        android:padding="@dimen/_4dp"
                        android:text="@string/guide_3"
                        android:textColor="@color/colorBlue"
                        android:textSize="@dimen/_10sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4dp"
                        android:padding="@dimen/_4dp"
                        android:text="@string/guide_4"
                        android:textColor="@color/colorBlue"
                        android:textSize="@dimen/_10sp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_200dp"
                        android:layout_marginTop="@dimen/_4dp"
                        android:contentDescription="@string/app_name"
                        android:padding="@dimen/_4dp"
                        android:src="@drawable/valid_prescription" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4dp"
                        android:padding="@dimen/_4dp"
                        android:text="@string/government_regulation_require_a_valid_prescription"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_12sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/continueLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_8dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:onClick="continuePrescription"
        android:padding="@dimen/_16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:gravity="center"
            android:text="@string/continue_key"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_16sp" />
    </LinearLayout>
</RelativeLayout>